week4/day2/labs/traffic-routing/broken-service-wrong-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-broken-selector
  namespace: week4
spec:
  type: ClusterIP
  selector:
    app: api-missing
  ports:
    - name: http
      port: 80
      targetPort: http
